--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tea-Protocol/sleep.git"
+    "url": "https://github.com/Tea-Protocol/sleep"
   },
   "author": "",
   "license": "ISC",
